// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display leak measure value 1`] = `
<div
  className="domain-measures-value leak-box"
  id="measure-new_bugs-leak"
>
  <Measure
    metricKey="new_bugs"
    metricType="INT"
    value="5"
  />
</div>
`;

exports[`should display leak measure value 2`] = `
<div
  className="domain-measures-value"
  id="measure-new_bugs-leak"
>
  <Measure
    metricKey="new_bugs"
    metricType="INT"
    value="5"
  />
</div>
`;

exports[`should display measure value 1`] = `
<div
  className="domain-measures-value"
  id="measure-bugs-value"
>
  <Measure
    metricKey="bugs"
    metricType="INT"
    value="5"
  />
</div>
`;
